--- a/KPI.Web/Views/AdminUser/_Modal.cshtml
+++ b/KPI.Web/Views/AdminUser/_Modal.cshtml
@@ -36,7 +36,8 @@
                         </div>
                         <div class="form-group">
                             <label for="Code">Role </label>
-                            <input type="text" class="form-control Role"  placeholder="Enter Role">
+                            @*<input type="text" class="form-control Role"  placeholder="Enter Role">*@
+                            <select class="form-control Role"></select>
                         </div>
                     </div>
                     <!-- /.box-body -->
@@ -88,7 +89,7 @@
                         </div>
                         <div class="form-group">
                             <label for="Code">Role </label>
-                            <input type="text" class="form-control Role"  placeholder="Enter Role">
+                            <select class="form-control Role"></select>
                         </div>
                     </div>
                     <!-- /.box-body -->
