--- a/KPI.Web/Views/Shared/_Script.cshtml
+++ b/KPI.Web/Views/Shared/_Script.cshtml
@@ -1,6 +1,6 @@
 ﻿<!-- ./wrapper -->
 <!-- jQuery 3 -->
-<script src="~/Scripts/plugins/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 <script src="~/Scripts/plugins/jquery.ui/jquery-ui.min.js"></script>
 <script src="~/Scripts/plugins/jquery.ui/jquery.ui-contextmenu.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
